--- a/src/ggrc/assets/assets.yaml
+++ b/src/ggrc/assets/assets.yaml
@@ -263,6 +263,7 @@ dashboard-js-files:
   - components/auto-save-form/fields/person-form-field.js
   - components/auto-save-form/field-views/text-form-field-view.js
   - components/auto-save-form/field-views/rich-text-form-field-view.js
+  - components/auto-save-form/field-views/checkbox-form-field-view.js
   #- d3.v2.js
   #- related_graph.js
 
@@ -458,6 +459,7 @@ dashboard-js-template-files:
   - components/auto-save-form/fields/person-form-field.mustache
   - components/auto-save-form/field-views/text-form-field-view.mustache
   - components/auto-save-form/field-views/rich-text-form-field-view.mustache
+  - components/auto-save-form/field-views/checkbox-form-field-view.mustache
   - custom_attributes/modal_content.mustache
   - custom_attributes/info.mustache
   - custom_attribute_definitions/modal_content.mustache
