Move CA logic to ca-utils helper. Move CA processing logic to assessment-info-pane component. Fix update issue with person component.

--- a/src/ggrc/assets/assets.yaml
+++ b/src/ggrc/assets/assets.yaml
@@ -44,6 +44,7 @@ dashboard-js-files:
   - apps/base_widgets.js
   - application.js
   - plugins/ggrc_utils.js
+  - plugins/utils/ca-utils.js
   - plugins/utils/query-api-utils.js
   - plugins/utils/current-page-utils.js
   - plugins/utils/state-utils.js
