--- a/src/ggrc/assets/assets.yaml
+++ b/src/ggrc/assets/assets.yaml
@@ -280,6 +280,7 @@ dashboard-js-files:
   - components/auto-save-form/field-views/checkbox-form-field-view.js
   - components/auto-save-form/field-views/date-form-field-view.js
   - components/auto-save-form/field-views/person-form-field-view.js
+  - components/folder-attachments-list/folder-attachments-list.js
   #- d3.v2.js
   #- related_graph.js
 
@@ -335,6 +336,7 @@ dashboard-js-template-files:
   - components/add-object-button/add-object-button.mustache
   - components/info-pin-buttons/info-pin-buttons.mustache
   - components/questions-link/questions-link.mustache
+  - components/folder-attachments-list/folder-attachments-list.mustache
   - base_objects/empty.mustache
   - base_objects/autocomplete_result.mustache
   - base_objects/confirm_delete.mustache
