--- a/src/ggrc_workflows/assets/assets.yaml
+++ b/src/ggrc_workflows/assets/assets.yaml
@@ -14,6 +14,7 @@ dashboard-js-files:
   - components/end_cycle.js
   - components/workflow_active.js
   - components/workflow_deactivate.js
+  - components/cycle_task_entries/attach-button.js
 
 dashboard-js-spec-files:
 
@@ -28,8 +29,6 @@ dashboard-js-template-files:
   - cycle_task_entries/tree_footer.mustache
   - cycle_task_entries/tree_add_item.mustache
   - cycle_task_entries/modal_content.mustache
-  - cycle_task_entries/documents.mustache
-  - cycle_task_entries/documents_footer.mustache
   - cycle_task_groups/info.mustache
   - cycle_task_group_objects/info.mustache
   - cycle_task_group_object_tasks/info.mustache
@@ -71,3 +70,4 @@ dashboard-js-template-files:
   - cycle_task_group_object_tasks/current_tg_tree_footer.mustache
   - workflows/clone_modal_content.mustache
   - task_groups/clone_modal_content.mustache
+  - cycle_task_entries/attach-button.mustache
