Add whitelist allowing app2app queryapi access

--- a/src/app.yaml.dist
+++ b/src/app.yaml.dist
@@ -93,3 +93,4 @@ env_variables:
   AUTHORIZED_DOMAINS: "{AUTHORIZED_DOMAINS}"
   GGRC_Q_INTEGRATION_URL: "{GGRC_Q_INTEGRATION_URL}"
   AUDIT_DASHBOARD_INTEGRATION_URL: "{AUDIT_DASHBOARD_INTEGRATION_URL}"
+  ALLOWED_QUERYAPI_APP_IDS: "{ALLOWED_QUERYAPI_APP_IDS}"
