--- a/src/ggrc/assets/assets.yaml
+++ b/src/ggrc/assets/assets.yaml
@@ -319,6 +319,9 @@ dashboard-js-files:
   - components/assessment/attach-button.js
   - components/object-tasks/object-tasks.js
   - components/mapped-counter/mapped-counter.js
+  - components/inline/inline.js
+  - components/inline/readonly-inline-content.js
+  - components/inline/inline-form-control.js
 
 app-init-files:
   - apps/dashboard.js
@@ -671,6 +674,14 @@ dashboard-js-template-files:
   - snapshots/tree_add_item.mustache
   - components/object-list-item/editable-document-object-list-item.mustache
   - components/assessment/attach-button.mustache
+  - components/inline/inline.mustache
+  - components/inline/input.mustache
+  - components/inline/text.mustache
+  - components/inline/readonly-inline-content.mustache
+  - components/inline/dropdown.mustache
+  - components/inline/date.mustache
+  - components/inline/checkbox.mustache
+  - components/inline/person.mustache
 
 dashboard-css-files:
   - dashboard.css
