--- a/src/ggrc/assets/assets.yaml
+++ b/src/ggrc/assets/assets.yaml
@@ -337,6 +337,7 @@ dashboard-js-files:
   - components/inline/base-inline-control-title.js
   - components/assessment/info-pane/inline-item.js
   - components/assessment/info-pane/confirm-inline-control-title.js
+  - components/visible-items-limiter/visible-items-limiter.js
 
 app-init-files:
   - apps/dashboard.js
@@ -702,6 +703,7 @@ dashboard-js-template-files:
   - components/inline/base-inline-control-title.mustache
   - components/assessment/info-pane/inline-item.mustache
   - components/assessment/info-pane/confirm-inline-control-title.mustache
+  - components/visible-items-limiter/visible-items-limiter.mustache
 
 dashboard-css-files:
   - dashboard.css
