--- a/src/ggrc/assets/assets.yaml
+++ b/src/ggrc/assets/assets.yaml
@@ -346,6 +346,8 @@ dashboard-js-files:
   - components/loading/loading-status.js
   - components/object-list-item/object-list-item-updater.js
   - components/lazy-render/lazy-render.js
+  - components/issue/issue-unmap.js
+  - components/issue/issue-unmap-item.js
 
 app-init-files:
   - apps/dashboard.js
@@ -708,6 +710,7 @@ dashboard-js-template-files:
   - components/inline/base-inline-control-title.mustache
   - components/assessment/info-pane/inline-item.mustache
   - components/loading/loading-status.mustache
+  - components/issue/issue-unmap.mustache
 
 dashboard-css-files:
   - dashboard.css
