--- a/src/ggrc/assets/assets.yaml
+++ b/src/ggrc/assets/assets.yaml
@@ -358,6 +358,10 @@ dashboard-js-template-files:
   - components/inline/base-inline-control-title.mustache
   - components/assessment/info-pane/inline-item.mustache
   - components/loading/loading-status.mustache
+  - components/issue/issue-unmap.mustache
+  - components/issue/issue-unmap-item.mustache
+  - components/issue/issue-unmap-related-assessments.mustache
+  - components/issue/issue-unmap-dropdown-item.mustache
 
 dashboard-js-spec-files:
   - spec_setup.js
