--- a/src/ggrc/assets/assets.yaml
+++ b/src/ggrc/assets/assets.yaml
@@ -340,4 +340,5 @@ dashboard-js-template-files:
   - components/inline/base-inline-control-title.mustache
   - components/assessment/info-pane/inline-item.mustache
   - components/loading/loading-status.mustache
+  - audits/info-buganizer-fields.mustache
   - buganizer_integration/modal_content_buganizer_fields.mustache
