--- a/src/ggrc/assets/assets.yaml
+++ b/src/ggrc/assets/assets.yaml
@@ -340,3 +340,5 @@ dashboard-js-template-files:
   - components/inline/base-inline-control-title.mustache
   - components/assessment/info-pane/inline-item.mustache
   - components/loading/loading-status.mustache
+  - buganizer_integration/modal-content-buganizer-fields.mustache
+  - buganizer_integration/info-buganizer-fields.mustache
